--- a/src/app/rawmaterials/place-rawmaterial-orders/place-rawmaterial-orders.component.html
+++ b/src/app/rawmaterials/place-rawmaterial-orders/place-rawmaterial-orders.component.html
@@ -1,1 +1,141 @@
 <p>place-rawmaterial-orders works!</p>
+<form action="PlaceRMOrderServlet" method="post">
+    <div class="container wrapper" class="form-check" class="was-validated">
+
+        <hr>
+        <div class="row">
+            <div class="col-sm-3">
+                <label for="RMName">
+                    <b>Raw Material Name</b>
+                </label>
+                <select class="form-control" name="RMName" required>
+                    <option *ngFor="let rmOrder of rmOrders">{{ rmOrder }}</option>
+                </select>
+            </div>
+
+            <div class="col-sm-2">
+                <label for="SUPID">
+                    <b>Supplier ID</b>
+                </label>
+                <select class="form-control" name="SUPID" required>
+                    <option *ngFor="let supplierId of supplierIds">{{ supplierId }}</option>
+                </select>
+            </div>
+
+            <div class="col-sm-2">
+                <label for="warehouseId">
+                    <b>Warehouse ID</b>
+                </label>
+                <select class="form-control" name="warehouseId" required>
+                    <option *ngFor="let warehouseId of warehouseIds">{{ warehouseId }}</option>
+                </select>
+            </div>
+
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-sm-3">
+                <label for="Quantity">
+                    <b>Quantity</b>
+                </label>
+                <br>
+                <input type="text" placeholder="Enter quantity" name="Quantity" class="text-box-size form-rounded" required>
+            </div>
+
+            <div class="col-sm-2">
+                <label for="QuantityUnit">
+                    <b>Quantity Unit</b>
+                </label>
+                <select class="form-control" name="QuantityUnit" required>
+                    <option>kg</option>
+                    <option>quintals</option>
+                </select>
+            </div>
+
+            <div class="col-sm-3">
+                    <label for="price_per_unit">
+                        <b>Price per Unit</b>
+                    </label>
+                    <br>
+                    <input type="text" placeholder="Enter amount in Rs" name="price_per_unit" class="text-box-size form-rounded" required>
+                </div>
+        </div>
+        <br>
+
+        <div class="row">
+            <div class="col-sm-3">
+                <label for="expectedDateofDelivery">
+                    <b>Expected Date of Delivery</b>
+                </label>
+                <input type="date" name="expectedDateofDelivery" class="text-box-size form-rounded">
+            </div>
+
+            
+        </div>
+        <br>
+
+        <div class="row">
+                <div class="col-sm-3">
+                </div>
+                <div class="col-sm-3">
+                    <button type="submit" class="registerbtn">Place Order</button>            
+                </div>
+            </div>
+        <br>
+
+    
+
+
+
+
+
+    </div>
+</form>
+<!-- <div>
+    <form>
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label for="inputEmail4">Email</label>
+                <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+            </div>
+            <div class="form-group col-md-6">
+                <label for="inputPassword4">Password</label>
+                <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="inputAddress">Address</label>
+            <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+        </div>
+        <div class="form-group">
+            <label for="inputAddress2">Address 2</label>
+            <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label for="inputCity">City</label>
+                <input type="text" class="form-control" id="inputCity">
+            </div>
+            <div class="form-group col-md-4">
+                <label for="inputState">State</label>
+                <select id="inputState" class="form-control">
+                    <option selected>Choose...</option>
+                    <option>...</option>
+                </select>
+            </div>
+            <div class="form-group col-md-2">
+                <label for="inputZip">Zip</label>
+                <input type="text" class="form-control" id="inputZip">
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="gridCheck">
+                <label class="form-check-label" for="gridCheck">
+                    Check me out
+                </label>
+            </div>
+        </div>
+        <button type="submit" class="btn btn-primary">Sign in</button>
+    </form>
+</div> -->
