Place Product Order added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
-<!-- <app-header></app-header> -->
-<app-place-rawmaterial-orders></app-place-rawmaterial-orders>
+<!Doctype html>
+<head>
+
+</head>
+<body> 
+<app-header></app-header>
+<!-- <app-place-rawmaterial-orders></app-place-rawmaterial-orders> -->
 <!-- <app-place-product-orders></app-place-product-orders> -->
+<router-outlet></router-outlet>
+</body>
