--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<p>header works!</p>
+<!-- <p>header works!</p> -->
 <div class="container-fluid">
     <header id="header">
 
@@ -6,85 +6,132 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-1 adjust-image-to-top">
-                        <a href="#"><img alt="logo" src="images/logo.png"
-                            class="rounded-circle header-img-title" width="80" height="80">
+                        <a href="#">
+                            <img alt="logo" src="../../assets/logo.png" class="rounded-circle header-img-title" width="90" height="90">
                         </a>
                     </div>
 
                     <div class="col-lg-4">
-
-
-                        <h2>Raw Material Order</h2>
-                        <p>Please cross-verify the details twice before entering</p>
-
+                        <h1>Drink and Delight</h1>
+                        <p>Deliciously Refreshing</p>
                     </div>
-
-
 
                     <div class="col-lg-7">
                         <nav class="main-nav float-right d-none d-lg-block">
                             <ul>
-                                <li><a href="homepage.html">Home</a></li>
+                                <li>
+                                    <a href="homepage.html">Home</a>
+                                </li>
 
-                                <li class="drop-down"><a href="">Raw Material</a>
+                                <li class="drop-down">
+                                    <a href="sdvvs">Raw Material</a>
                                     <ul>
-                                        <li><a router>Place an Order</a></li>
-                                        <li class="drop-down"><a href="#">Display all orders</a>
+                                        <li>
+                                            <a routerLink="place-rawmaterial-order">Place an Order</a>
+                                        </li>
+                                        <li class="drop-down">
+                                            <a href="#">Display all orders</a>
                                             <ul>
-                                                <li><a href="DisplayAllRawMaterialOrders.html">All
-                                                        Orders</a></li>
-                                                <li><a href="DisplayReceivedRawMaterialOrders.html">Received
-                                                        Orders</a></li>
-                                                <li><a href="DisplayPendingRawMaterialOrders.html">Pending
-                                                        Orders</a></li>
-                                                <li><a href="DisplayCancelledRawMaterialOrders.html">Cancelled
-                                                        Orders</a></li>
-                                                <li><a
-                                                    href="DisplayRawMaterialOrdersBetweenDates.html">Orders
-                                                        between Dates</a></li>
-                                                <li><a href="DisplayRMOrdersFromSupplier.html">Orders
-                                                        from a Supplier</a></li>
-                                            </ul></li>
-                                        <li><a href="UpdateRawMaterialDeliveryStatus.html">Update
-                                                an order</a></li>
-                                        <li><a href="UpdateRMStock.html">Update Stock</a></li>
-                                        <li><a href="updateProcessDate.html">Set process
-                                                Date</a></li>
-                                        <li><a href="trackRawMaterial.html">Track Raw
-                                                Material Order</a></li>
-                                    </ul></li>
+                                                <li>
+                                                    <a href="DisplayAllRawMaterialOrders.html">All Orders
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="DisplayReceivedRawMaterialOrders.html">Received Orders
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="DisplayPendingRawMaterialOrders.html">Pending Orders
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="DisplayCancelledRawMaterialOrders.html">Cancelled Orders
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="DisplayRawMaterialOrdersBetweenDates.html">Orders between Dates</a>
+                                                </li>
+                                                <li>
+                                                    <a href="DisplayRMOrdersFromSupplier.html">Orders from a Supplier</a>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                        <li>
+                                            <a href="UpdateRawMaterialDeliveryStatus.html">Update an order</a>
+                                        </li>
+                                        <li>
+                                            <a href="UpdateRMStock.html">Update Stock</a>
+                                        </li>
+                                        <li>
+                                            <a href="updateProcessDate.html">Set process Date
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="trackRawMaterial.html">Track Raw Material Order</a>
+                                        </li>
+                                    </ul>
+                                </li>
 
 
-                                <li class="drop-down"><a href="">Product</a>
+                                <li class="drop-down">
+                                    <a href="">Product</a>
                                     <ul>
-                                        <li><a href="PlaceProductOrder.html">Place an Order</a></li>
-                                        <li class="drop-down"><a href="#">Display all orders</a>
+                                        <li>
+                                            <a href="PlaceProductOrder.html">Place an Order</a>
+                                        </li>
+                                        <li class="drop-down">
+                                            <a href="#">Display all orders</a>
                                             <ul>
-                                                <li><a href="DisplayAllProductOrders.html">All
-                                                        Orders</a></li>
-                                                <li><a href="DisplayReceivedProductOrder.html">Received
-                                                        Orders</a></li>
-                                                <li><a href="DisplayDispatchedProductOrderSubmit.html">Dispatched
-                                                        Orders</a></li>
-                                                <li><a href="DisplayPendingProductOrderSubmit.html">Pending
-                                                        Orders</a></li>
-                                                <li><a href="DisplayCancelledProductOrderSubmit.html">Cancelled
-                                                        Orders</a></li>
-                                                <li><a href="DisplayProductOrdersBetweenDates.html">Orders
-                                                        between Dates</a></li>
-                                                <li><a href="DisplayProductOrdersFromDistributor.html">Orders
-                                                        from a Distributor</a></li>
-                                            </ul></li>
-                                        <li><a href="UpdateProductDeliveryStatus.html">Update
-                                                an order</a></li>
-                                        <li><a href="UpdateProductStock.html">Update Stock</a></li>
-                                        <li><a href="updateExitDate.html">Set Exit Date</a></li>
-                                        <li><a href="trackProductOrder.html">Track Product
-                                                Order</a></li>
-                                    </ul></li>
+                                                <li>
+                                                    <a href="DisplayAllProductOrders.html">All Orders
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="DisplayReceivedProductOrder.html">Received Orders
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="DisplayDispatchedProductOrderSubmit.html">Dispatched Orders
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="DisplayPendingProductOrderSubmit.html">Pending Orders
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="DisplayCancelledProductOrderSubmit.html">Cancelled Orders
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="DisplayProductOrdersBetweenDates.html">Orders between Dates</a>
+                                                </li>
+                                                <li>
+                                                    <a href="DisplayProductOrdersFromDistributor.html">Orders from a Distributor</a>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                        <li>
+                                            <a href="UpdateProductDeliveryStatus.html">Update an order</a>
+                                        </li>
+                                        <li>
+                                            <a href="UpdateProductStock.html">Update Stock</a>
+                                        </li>
+                                        <li>
+                                            <a href="updateExitDate.html">Set Exit Date</a>
+                                        </li>
+                                        <li>
+                                            <a href="trackProductOrder.html">Track Product Order
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </li>
 
-                                <li><a href="#">Contact Us</a></li>
-                                <li><a href="LogOutServlet">Log out</a></li>
+                                <li>
+                                    <a href="#">Contact Us</a>
+                                </li>
+                                <li>
+                                    <a href="LogOutServlet">Log out</a>
+                                </li>
                             </ul>
                         </nav>
                         <!-- .main-nav -->
@@ -95,4 +142,4 @@
 
     </header>
     <!-- #header -->
-</div>
+</div> -->
