stock forms using angular bootstrap

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
 <!-- <app-header></app-header> -->
-<app-place-rawmaterial-orders></app-place-rawmaterial-orders>
+<!-- <app-place-rawmaterial-orders></app-place-rawmaterial-orders> -->
 <!-- <app-place-product-orders></app-place-product-orders> -->
+<app-update-rawmaterial-stock></app-update-rawmaterial-stock>
+<app-set-process-date></app-set-process-date>
+<app-track-rawmaterial-order></app-track-rawmaterial-order>
+<app-update-product-stock></app-update-product-stock>
+<app-set-exit-date></app-set-exit-date>
+<app-track-product-order></app-track-product-order>
