--- a/src/app/rawmaterials/set-process-date/set-process-date.component.html
+++ b/src/app/rawmaterials/set-process-date/set-process-date.component.html
@@ -1,1 +1,51 @@
-<p>set-process-date works!</p>
+<div class="container">
+    <div>
+            <h2>Update Process Date of raw material</h2>
+            <p>Enter the process date for order ID</p>
+        </div>
+        <hr>
+        <br>
+        <form>
+            <div class="form-group">
+                    <div class="row">
+                        <div class="col-lg-2">
+                            <label for="orderID">Enter Order ID</label>
+                        </div>
+            
+                        <div class="col-lg-3">
+                            <input required pattern='[0-9]+' type="text" #orderID='ngModel' class='form-control' id="orderID"
+                                    [(ngModel)]='orderId' name='orderID' (change) = "log(orderID)">
+                            <!-- <div class = "alert alert-danger" *ngIf = 'orderIDcheck'>Enter numeric order id</div> -->
+                            <div class="alert alert-danger" *ngIf="orderID.touched && !orderID.valid"> Order ID is required
+                            <div *ngIf="orderID.errors.pattern"> Enter numeric order ID</div>
+                            </div>
+                        </div>
+                    </div>
+            </div>
+    
+            <div class="form-group">
+                    <div class="row">
+                        <div class="col-lg-2">
+                            <label for="processdate">Process Date</label>
+                        </div>
+            
+                        <div class="col-lg-3">
+                            <input required type="date"  class='form-control' id="processdate" #updateProcessDate='ngModel'
+                            [(ngModel)]='processDate' name='processDate' (change) = "log(updateProcessDate)">
+                                     
+                                <!-- <div class = "alert alert-danger" *ngIf = 'orderIDcheck'>Enter numeric order id</div> -->
+                            <div class="alert alert-danger" *ngIf="updateProcessDate.touched && !updateProcessDate.valid"> enter process date </div>
+                            
+                        </div>
+                    </div>
+                
+            </div>
+    <br>
+            <button type="submit" class="btn btn-primary">Update</button>
+    
+    
+    
+    
+    </form>
+    
+    </div>
