--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,6 @@
 <p>footer works!</p>
+<footer>
+    <div class="footer-copyright text-center bg-info text-white" id="footerbelowfixed">© 2019 Copyright:
+        <a href="#">Drink and Delight</a>
+    </div>
+</footer>
