--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,7 @@
 <app-header></app-header>
 <!-- <app-place-rawmaterial-orders></app-place-rawmaterial-orders> -->
 <!-- <app-place-product-orders></app-place-product-orders> -->
+<app-place-product-order></app-place-product-order>
+<app-footer></app-footer>
 <router-outlet></router-outlet>
 </body>
