--- a/src/app/rawmaterials/place-rawmaterial-orders/place-rawmaterial-orders.component.html
+++ b/src/app/rawmaterials/place-rawmaterial-orders/place-rawmaterial-orders.component.html
@@ -39,7 +39,12 @@
                     <b>Quantity</b>
                 </label>
                 <br>
-                <input type="text" placeholder="Enter quantity" name="Quantity" class="text-box-size form-rounded" required>
+                <input required pattern='[0-9]+' type="text" #quantity='ngModel' class='form-control' id="quantity" 
+                [(ngModel)]='quantityVar' name='quantity' (change)="log(quantity)">
+                <div class="alert alert-danger" *ngIf="quantity.touched && !quantity.valid"> This field is required
+                    <div *ngIf="quantity.errors.pattern"> Enter value in decimal only </div>
+                </div>
+                <!-- <input type="text" placeholder="Enter quantity" name="Quantity" class="text-box-size form-rounded" required> -->
             </div>
 
             <div class="col-sm-2">
@@ -57,7 +62,12 @@
                     <b>Price per Unit</b>
                 </label>
                 <br>
-                <input type="text" placeholder="Enter amount in Rs" name="price_per_unit" class="text-box-size form-rounded" required>
+                <input required pattern='[0-9]+' type="text" #pricePerUnit='ngModel' class='form-control' id="pricePerUnit" 
+                [(ngModel)]='pricePerUnitVar' name='pricePerUnit' (change)="log(pricePerUnit)">
+                <div class="alert alert-danger" *ngIf="pricePerUnit.touched && !pricePerUnit.valid"> This field is required
+                    <div *ngIf="pricePerUnit.errors.pattern"> Enter value in decimal only </div>
+                </div>
+                <!-- <input type="text" placeholder="Enter amount in Rs" name="price_per_unit" class="text-box-size form-rounded" required> -->
             </div>
         </div>
         <br>
