LINK ROUTER ADDED

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,5 @@
-<p>footer works!</p>
 <footer>
-    <div class="footer-copyright text-center bg-info text-white" id="footerbelowfixed">© 2019 Copyright:
+    <div class="footer-copyright text-center bg-dark font sticky-bottom">© 2019 Copyright:
         <a href="#">Drink and Delight</a>
     </div>
 </footer>
