--- a/src/app/products/place-product-order/place-product-order.component.html
+++ b/src/app/products/place-product-order/place-product-order.component.html
@@ -1,5 +1,5 @@
-<p>
-    place-product-order works!</p>
+<br>
+<h3>Place Product Order</h3>
 
 <form action="PlaceProductOrderServlet" method="post">
     <div class="container wrapper" class="form-check" class="was-validated">
