--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -11,9 +11,9 @@ height: 60%;
     float: right;
 }
 .font{
-font-size: 150%;
+font-size: 100%;
 font-weight: bold;
-font-family: 'Lucida console', monospace;
+font-family: cursive;
 color: #ffffcc;
 }
 .mr-auto {
