minor changes in nav bar

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,7 +16,7 @@
         <ul class="nav navbar-nav mr-auto">
           <li class="nav-item">
                 <div class="btn-group">
-                        <button class="btn btn-secondary btn-sm dropdown-toggle font" id="navbardrop" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <button class="btn btn-secondary btn-md btn-secondary-spacing font" id="navbardrop" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         HOME
                         </button>
             <!-- <a class="nav-link"><p class="font">HOME</p></a> -->
@@ -25,7 +25,7 @@
 
           <li class="nav-item dropdown">
                 <div class="btn-group">
-                        <button class="btn btn-secondary btn-sm dropdown-toggle font" id="navbardrop" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <button class="btn btn-secondary btn-md dropdown-toggle btn-secondary-spacing font" id="navbardrop" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           RAW MATERIAL
                         </button>
             <!-- <a class="nav-link dropdown-toggle font" href="#" id="navbardrop" data-toggle="dropdown">Raw Material
@@ -43,7 +43,7 @@
 
           <li class="nav-item dropdown">
                 <div class="btn-group">
-                        <button class="btn btn-secondary btn-sm dropdown-toggle font" id="navbardrop" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <button class="btn btn-secondary btn-md dropdown-toggle btn-secondary-spacing font" id="navbardrop" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         PRODUCT
                         </button>
             <!-- <a class="nav-link dropdown-toggle font" href="#" id="navbardrop" data-toggle="dropdown">PRODUCT</a> -->
@@ -61,7 +61,7 @@
 
           <li class="nav-item">
                 <div class="btn-group">
-                        <button class="btn btn-secondary btn-sm dropdown-toggle font" id="navbardrop" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <button class="btn btn-secondary btn-md font" id="navbardrop" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         LOGOUT
                         </button>
             <!-- <a class="nav-link font" href="#">LOGOUT</a> -->
