--- a/src/app/products/display-product-orders/display-product-orders.component.html
+++ b/src/app/products/display-product-orders/display-product-orders.component.html
@@ -1,1 +1,48 @@
-<p>display-product-orders works!</p>
+<h1>Display Product Orders</h1>
+<form action="DisplayAllProductOrdersServlet" method="post">
+        <div class="container wrapper" class="form-check" class="was-validated">
+
+                <hr>
+                <div class="row">
+                        <div class="col-sm-4">
+                                <label for="DeliveryStatus">
+                                        <p><b>Choose delivery status</b> </p>
+                                </label>
+                                <select class="form-control" name="DeliveryStatus" required>
+                                        <option value="ALL">ALL</option>
+                                        <option value="Received">Received</option>
+                                        <option value="Dispatched">Dispatched</option>
+                                        <option value="Cancelled">Cancelled</option>
+                                        <option value="Pending">Pending</option>
+                                </select> <br>
+                                <label for="DistributorID">
+                                        <p><b>Choose Distributor</b> </p>
+                                </label>
+                                <select class="form-control" name="DistributorID" required>
+                                        <option value="ALL">ALL</option>
+                                        <option value="d001">d001</option>
+                                        <option value="d002">d002</option>
+                                        <option value="d003">d003</option>
+                                        <option value="d004">d004</option>
+                                        <option value="d005">d005</option>
+                                </select>
+                        </div>
+                        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                        <div class="col-lg-2"><br><br><br><input type="checkbox" (click)="changestatus(); SetMaxDate()" > Show
+                                Calendar<br></div>
+
+                        <div *ngIf="!(showdate); then thenBlock else elseBlock"></div>
+                        <ng-template #thenBlock>
+                                <div class="col-lg-4"> Enter start date: <br> <input [max]="todayFormat" type="date" name="date1" id="date1"  ><br><br> Enter end date : <br>
+                                        <input [max]="todayFormat" type="date" name="date1" id="date2"><br><br> </div>
+                        </ng-template>
+                        <ng-template #elseBlock>
+                        </ng-template>
+                </div>
+                <div class="container"><br><br><br><br>
+                        <div style="width:500px;" align="right">
+                                <input  type="submit" value="submit"><br>
+                                <p> </p>
+                </div>
+        </div>
+       
