--- a/src/app/rawmaterials/display-rawmaterial-orders/display-rawmaterial-orders.component.html
+++ b/src/app/rawmaterials/display-rawmaterial-orders/display-rawmaterial-orders.component.html
@@ -1,1 +1,53 @@
-<p>display-rawmaterial-orders works!</p>
+<h2>Display Raw Material Order</h2>
+<form action="DisplayAllRawMaterialOrdersServlet" method="post">
+        <div class="container wrapper" class="form-check" class="was-validated">
+
+                <hr>
+                <div class="row">
+                        <div class="col-sm-4">
+                                <label for="DeliveryStatus">
+                                        <p><b>Choose delivery status</b> </p>
+                                </label>
+                                <select class="form-control" name="DeliveryStatus" required>
+                                        <option value="ALL">ALL</option>
+                                        <option value="Received">Received</option>
+                                        <option value="Dispatched">Dispatched</option>
+                                        <option value="Cancelled">Cancelled</option>
+                                        <option value="Pending">Pending</option>
+                                </select> <br>
+                                <label for="SupplierID">
+                                        <p><b>Choose Supplier</b> </p>
+                                </label>
+                                <select class="form-control" name="SupplierID" required>
+                                        <option value="ALL">ALL</option>
+                                        <option value="SUP1">SUP1</option>
+                                        <option value="SUP2">SUP2</option>
+                                        <option value="SUP3">SUP3</option>
+                                        <option value="SUP4">SUP4</option>
+                                        <option value="SUP5">SUP5</option>
+                                </select>
+                        </div>
+                        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                        <div class="col-lg-2"><br><br><br><input type="checkbox" (click)="changestatus(); SetMaxDate()" > Show
+                                Calendar<br></div>
+
+                        <div *ngIf="!(showdate); then thenBlock else elseBlock"></div>
+                        <ng-template #thenBlock>
+                                <div class="col-lg-4"> Enter start date: <br> <input [max]="todayFormat" type="date" name="date1" id="date1"  ><br><br> Enter end date : <br>
+                                        <input [max]="todayFormat" type="date" name="date1" id="date2"><br><br> </div>
+
+                        </ng-template>
+                        <ng-template #elseBlock>
+                        </ng-template>
+
+                </div>
+
+                <div class="container"><br><br><br><br>
+                        <div style="width:500px;" align="right">
+
+                                <input  type="submit" value="submit"><br>
+                                <p> document.getElementById("date1");</p>
+
+                </div>
+        </div>
+        
