data reaching servlet

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,8 @@
 <app-set-process-date></app-set-process-date>
 <app-track-rawmaterial-order></app-track-rawmaterial-order>
 <app-update-product-stock></app-update-product-stock>
-<app-set-exit-date></app-set-exit-date>
-<app-track-product-order></app-track-product-order> -->
+<app-set-exit-date></app-set-exit-date> -->
+<app-track-product-order></app-track-product-order>
 <!-- 
 <!Doctype html>
 <head>
